--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -1100,90 +1100,112 @@ section.nl-section.nl-players.nl-create-team.soccer
                                     tbody
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
                                             td.pos G
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos DL
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos D
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos DR
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos D
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos DAL
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos D
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos DAR
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos D
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos CM
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos M
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos RWM
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos M
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos LWM
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos M
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos RS
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos S
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos LS
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos S
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
-                                            td.pos ST
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
+                                            td.pos S
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
 
