--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -763,7 +763,7 @@ section.nl-section.nl-players.nl-create-team
                                             th OPP
                                             th GameDAY
                                             th more
-                                div.nl-table-scroll
+                                div.nl-table-scroll2
                                     table.table.table-striped
                                         tbody
                                             tr
@@ -773,6 +773,30 @@ section.nl-section.nl-players.nl-create-team
                                                 td $21000
                                                 td 20
                                                 td.orange K
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17 11:00 PM
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td.orange QB
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17 11:00 PM
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td.orange RB
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -1019,73 +1043,91 @@ section.nl-section.nl-players.nl-create-team
                                     tbody
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime RMA-BAR 3:00PM
                                             td.pos FLEX
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime TOT-BOR 2:00PM
                                             td.pos K
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime TOT-BOR 2:00PM
                                             td.pos RB
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime TOT-BOR 2:00PM
                                             td.pos RB
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime TOT-BOR 2:00PM
                                             td.pos QB
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime TOT-BOR 2:00PM
                                             td.pos WR
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime TOT-BOR 2:00PM
                                             td.pos WR
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime TOT-BOR 2:00PM
                                             td.pos TE
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
                                         tr
 
-                                            td Player name
+                                            td 
+                                                p Player name
+                                                p.gametime TOT-BOR 2:00PM
                                             td.pos DEF
                                             td 30
                                             td $0
                                             td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                                button.btn.btn-sm.btn-warning cut
