--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -36,6 +36,24 @@
 
 .nl-create-team {
 
+  .nl-my-teams .table td {
+    padding: 0rem;
+  }
+
+  .nl-my-teams .table td p {
+    margin-bottom: 0px;
+  }
+
+  .nl-my-teams .table td button {
+    font-weight: 600;
+  }
+  
+  .nl-my-teams .table td p.gametime {
+    line-height: 1rem;
+    font-size: 10px;
+    font-style: italic;
+  }
+
   .nl-mob-table .nl-content p.orange, td.orange {
     color: #ff9f2f;
   }
@@ -53,13 +71,13 @@
 
   @include respond-to (allwide) {
     .nl-my-teams .nl-team-card img {
-      height: 100px;
+      height: 80px;
     }
   }
 
   @include respond-to (tablets) {
     .nl-my-teams .nl-team-card img {
-      height: 100px;
+      height: 70px;
     }
 
     .nl-team-card.table-data-field h3 {
@@ -69,7 +87,7 @@
 
   @include respond-to (allmobile) {
     .nl-my-teams .nl-team-card img {
-      height: 80px;
+      height: 60px;
     }
 
     .nl-team-card.table-data-field h3 {
@@ -134,6 +152,10 @@
 
 .nl-create-team-table {
   
+  .nl-table-scroll2 {
+    max-height: 34rem;
+  }
+
   .visibility-hidden {
     visibility: hidden;
   }
