fixed scroller issue on create team soccer page

--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -12360,7 +12360,7 @@ td:nth-child(4).homepage-list-view {
   padding-left: 0.25rem; }
 
 .nl-create-team-table .nl-table-scroll2 {
-  max-height: 34rem; }
+  max-height: 37.5em; }
 
 .nl-create-team-table .visibility-hidden {
   visibility: hidden; }
