--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -837,9 +837,33 @@ section.nl-section.nl-players.nl-create-team.soccer
                                             th OPP
                                             th GameDAY
                                             th more
-                                div.nl-table-scroll
+                                div.nl-table-scroll2
                                     table.table.table-striped
                                         tbody
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td ACT
+                                                td.orange GK
+                                                td RMA
+                                                td FCB
+                                                td 09/17/17 11:00 PM
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td ACT
+                                                td.orange D
+                                                td RMA
+                                                td FCB
+                                                td 09/17/17 11:00 PM
+                                                td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
                                                     button.btn.btn-primary.btn-sm Draft
