--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -153,7 +153,7 @@
 .nl-create-team-table {
   
   .nl-table-scroll2 {
-    max-height: 34rem;
+    max-height: 37.5em;
   }
 
   .visibility-hidden {
