--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -7,10 +7,21 @@ section.nl-section.nl-my-teams
             div.col-6.col-sm-6.col-md-6.col-lg-8
                 a(href="create_team_football.html") 
                     div.btn.btn-primary.btn-lg.btn-create-team Create team
-
             div.col-6.col-sm-6.col-md-6.col-lg-4.helmet
                 a(href="#") 
                     div.btn.btn-primary.btn-lg.btn-create-team Create Helmet
+            //div.col-sm-12
+            div.nl-status-wrapper
+                    ul
+                        li
+                            span.playing.indicator
+                            span Playing
+                        li
+                            span.played.indicator
+                            span Played
+                        li
+                            span.not-playing.indicator
+                            span Not Playing
 
         div.row.nl-m-b-25
             div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
