--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -117,6 +117,10 @@
       @media (max-width: 1200px) {
         height: 50px;
       }
+
+      @media (min-width: 1200px) {
+        height: 65px;
+      }
     }
 
     &-data-field {
@@ -154,7 +158,7 @@
 
       @include respond-to(allwider){
         margin-left: 2rem;
-        font-size: 23px;
+        font-size: 21px;
 
       }
 
@@ -238,8 +242,8 @@
       text-align: center;
     }
     .indicator{
-      width: calculateRem(15px);
-      height: calculateRem(15px);
+      width: calculateRem(10px);
+      height: calculateRem(10px);
     }
     .pos{
       color: #e58607;
