remove extra tabs contests for now, draft button higher font weight

--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -24,6 +24,12 @@ section.nl-section.nl-players.nl-contests
                             a.nav-link(data-toggle="tab" href="#d" role="tab") private
                         li.nav-item
                             a.nav-link(data-toggle="tab" href="#d" role="tab") My Contests
+                        //- li.nav-item
+                        //-     a.nav-link(data-toggle="tab" href="#d" role="tab") H2h
+                        //- li.nav-item
+                        //-     a.nav-link(data-toggle="tab" href="#d" role="tab") Special
+                        //- li.nav-item
+                        //-     a.nav-link(data-toggle="tab" href="#d" role="tab") High
 
 
                     div.tab-content
