--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -12374,10 +12374,14 @@ td:nth-child(4).homepage-list-view {
       max-width: 10rem; } }
 
 .nl-create-team-table .table thead th:first-child {
-  padding-left: 0.25rem; }
+  padding-left: 0.5rem; }
 
 .nl-players-table.nl-create-team-table td:first-child {
-  padding-left: 0.25rem; }
+  padding-left: 0.5rem; }
+
+.nl-create-team-table .btn-sm {
+  padding: 0.25rem;
+  font-weight: 600; }
 
 .nl-create-team-table .nl-table-scroll2 {
   max-height: 37.5em; }
